--- a/EscalArt/templates/escalArt/Perfil_Artista.html
+++ b/EscalArt/templates/escalArt/Perfil_Artista.html
@@ -9,7 +9,10 @@
     <title>Perfil Artista</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
+    <link rel="shortcut icon" type="image/png" href="{% static 'EscalArt/img/favicon.ico' %}" />
+
     <link type="text/css" rel="stylesheet" href="{% static 'EscalArt/css/Menu-Fotter.css' %}">
+    <link type="text/css" rel="stylesheet" href="{% static 'EscalArt/css/ErrorMessages.css' %}">
     <link type="text/css" rel="stylesheet" href="{% static 'EscalArt/css/perfil.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,9 +29,11 @@
 </head>
 
 <body>
-    {% include 'escalArt/includes/menu.html' %}
+    {% include 'escalArt/includes/menu.html' %} {% if message %}
+    <div class="error">{{message}}</div>
 
-    <div class="scrol"></div>
+    {% endif %}
+
     <!--<script type="text/javascript" src="{% static 'EscalArt/js/menu.js' %}"></script>-->
 
     <!--Diseño Perfi-->
@@ -74,9 +79,14 @@
                             <i class="far fa-image"></i>
                         </button>
 
-                        <div style="width: 100%;height:50px;background-color:white;position:absolute;left:5%;display: none;" id="AlertaOk">
-                            <button onclick="OcultarAlerta();" class="btn-Editar-Bio btnPfp" type="submit" name="fotoPerfil">Aceptar</button>
-                            <button onclick="OcultarAlerta();" class="btnPfp" style="margin-left: 5%;">Cancelar </button>
+                        <div class="aleta-aceptar-cerrar" style=" border-radius:10px; width: 300px;height:200px;background-color:white;position:absolute;top: 30%;
+                        left: -30%;display: none;" id="AlertaOk">
+                            <h1>¿Quieres cambiar la imagen?</h1>
+                            <div class="btn-aceptar-cerrar-img">
+                                <button onclick="OcultarAlerta();" class="btn-Editar-Bio btnPfp" type="submit" name="fotoPerfil">Aceptar</button>
+                                <button onclick="OcultarAlerta();" class="btnPfp" style="margin-left: 5%;">Cancelar </button>
+                            </div>
+
 
                         </div>
                     </form>
@@ -91,8 +101,12 @@
                     </button>
 
                     <div id="AlertaOk2">
-                        <button onclick="OcultarAlerta2();" class="btn-Editar-Bio btnHeader" type="submit" name="EditHeader">Aceptar</button>
-                        <button onclick="OcultarAlerta2();" class="btnHeader" style="margin-left: 5%;">Cancelar </button>
+                        <h1 class="title-cambiar-fondo">¿Quieres cambiar el fondo?</h1>
+                        <div class="btn-aceptar-cerrar-fondo-img">
+                            <button onclick="OcultarAlerta2();" class="btn-Editar-Bio btnHeader" type="submit" name="EditHeader">Aceptar</button>
+                            <button onclick="OcultarAlerta2();" class="btnHeader" style="margin-left: 5%;">Cancelar </button>
+                        </div>
+
 
                     </div>
 
@@ -105,26 +119,7 @@
                 {% if list.username == user.username %}
                 <button onclick="MostrarPublicacion();" class="btn-Crear-Publicacion"><i class="fa-solid fa-paint-roller"></i>Crear Publicacion</button> {%endif%}
                 <h3 class="titulo column">{{list.username}}</h3>
-                <div class="settings-container">
 
-                    <!--  -->
-                    {% if list.username == user.username %}
-                    <button class="column" onclick="MostrarOpciones();"><i class="fa-solid fa-ellipsis settings"></i></button>
-
-
-                    <!--  -->
-                    {%endif%}
-                </div>
-                {% if user.is_authenticated %}
-                <div id="settings-artista">
-                    <ul class="Configuracion-settings">
-                        <li>
-                            <i class="fa-solid fa-bookmark"></i><a href="{% url 'perfil_cliente' user.username %}">Perfil</a></li>
-                        <li><i class="fa-solid fa-gear"></i><a href="{% url 'configuracion' %}">Configuracion</a></li>
-                        <span class="linea_2"></span>
-                    </ul>
-                </div>
-                {%endif%}
                 <!--  -->
                 {% if list.username == user.username %}
 
@@ -139,14 +134,13 @@
                     <form method="POST">
                         {% csrf_token %} {{solicitudForm}}
 
-                        <input type="submit" class="btn-Crear-Publicacion" value="Solicitar Mensaje" name="solicitud">
+                        <input type="submit" class="btn-Solicitar-mensaje" value="Solicitar Mensaje" name="solicitud">
 
                     </form>
-                    <!--  -->
-                    {% if is_following %}
+                    {% if user.is_authenticated %} {% if is_following %}
                     <form method="POST" action="{% url 'remove-follower' list.idUser %}">
                         {% csrf_token %}
-                        <button type="submit" class="btn-Editar-Bio">
+                        <button type="submit" class="btn-seguir-red">
                             
                             Dejar de seguir
                         </button>
@@ -156,13 +150,32 @@
                     {% else %}
                     <form method="POST" action=" {% url 'add-follower' list.idUser %}">
                         {% csrf_token %}
-                        <button type="submit" class="btn-Editar-Bio">
+                        <button type="submit" class="btn-seguir">
                             
                             Seguir
                         </button>
                     </form>
 
-                    {% endif %}
+                    {% endif %} {% else %} {% if is_following %}
+                    <form method="" action="">
+                        {% csrf_token %}
+                        <button type="submit" class="btn-seguir-red">
+                            
+                            Dejar de seguir
+                        </button>
+
+                    </form>
+                    <!--  -->
+                    {% else %}
+                    <form method="" action="">
+                        {% csrf_token %}
+                        <button type="submit" class="btn-seguir">
+                            
+                            Seguir
+                        </button>
+                    </form>
+
+                    {% endif %} {% endif %}
                     <!--  -->
                     {% endif %}
 
@@ -189,8 +202,9 @@
                     {% endfor %}
 
                 </div>
-                <span class="linea_2"></span>
+
                 <ul class="lista-info">
+                    <span class="linea_2"></span>
                     <!-- 5 Inicio de for para mostrar los datos en perfil segun el usuario conectado -->
                     {% for perfil in perfil %}
                     <!-- 6 inicio if para identificar perfil segun user -->
@@ -300,7 +314,7 @@
 
                                     {% if review.idUser.imagen %}
                                     <img src="/{{review.idUser.imagen}}" alt=""> {% else %}
-                                    <img src="{% static 'EscalArt/img/persona_1.jpg' %}" alt=""> {% endif %}
+                                    <img src="{% static 'EscalArt/img/perfil.jpg' %}" alt=""> {% endif %}
 
                                 </div>
                                 <div class="name-user">
@@ -321,12 +335,45 @@
                         </div>
                     </div>
                 </div>
+                {%empty%}
+                <h1 class="empty-saves">Aun no hay reviews. Se el primero!</h1>
                 {% endfor %}
 
 
 
             </div>
 
+            {% if list.idUser == user.idUser%}
+            <form class="Comentar-Usuarios" method="POST">
+                {%csrf_token %}
+                <div class="Comentar-calificacion">
+                    <span style="margin-right: 10px;">Calificar</span><br>
+                    <div class="Comentar-iconos rate" style="background-color: white;">
+                        <!-- <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i> -->
+                        <input disabled type="radio" name="rating" id="rating10" value="10" required /><label for="rating10" title="10"></label>
+                        <input disabled type="radio" name="rating" id="rating9" value="9" required /><label for="rating9" title="9" class="half"></label>
+                        <input disabled type="radio" name="rating" id="rating8" value="8" required /><label for="rating8" title="8"></label>
+                        <input disabled type="radio" name="rating" id="rating7" value="7" required /><label for="rating7" title="7" class="half"></label>
+                        <input disabled type="radio" name="rating" id="rating6" value="6" required /><label for="rating6" title="6"></label>
+                        <input disabled type="radio" name="rating" id="rating5" value="5" required /><label for="rating5" title="5" class="half"></label>
+                        <input disabled type="radio" name="rating" id="rating4" value="4" required /><label for="rating4" title="4"></label>
+                        <input disabled type="radio" name="rating" id="rating3" value="3" required /><label for="rating3" title="3" class="half"></label>
+                        <input disabled type="radio" name="rating" id="rating2" value="2" required /><label for="rating2" title="2"></label>
+                        <input disabled type="radio" name="rating" id="rating1" value="1" required /><label for="rating1" title="1" class="half"></label>
+
+
+                    </div>
+                </div>
+                <i class="fa-solid fa-face-smile"></i>
+                <input hidden="hidden" name="calificacion" value="{{calificacion}}">
+                <input readonly name="review" type="text" placeholder="Escriba su comentario...">
+                <button disabled name="enviarReview" type="submit">Comentar</button>
+            </form>
+            {% else %}
             <form class="Comentar-Usuarios" method="POST">
                 {%csrf_token %}
                 <div class="Comentar-calificacion">
@@ -354,10 +401,11 @@
                 <i class="fa-solid fa-face-smile"></i>
                 <input hidden="hidden" name="calificacion" value="{{calificacion}}">
                 <input name="review" type="text" placeholder="Escriba su comentario...">
-                <div class="button-comentar">
-                    <button name="enviarReview" type="submit">Comentar...</button>
-                </div>
+                <button name="enviarReview" type="submit">Comentar</button>
             </form>
+            {% endif %}
+
+
         </div>
     </section>
     <!--Crear Publicacion Artista-->
@@ -385,10 +433,10 @@
                     <button type="button" class="boton-avatar" id="custom-button4">
                         <img src="{% static 'escalArt/img/uploadImage.svg' %}" id="imagen-post" alt="">
                     </button>
-                    <div class="publicacion-bottom_2">
-                        <input type="submit" name="publicar" value="Publicar...">
-                        <input type="reset" value="Limpiar">
-                    </div>
+                </div>
+                <div class="publicacion-bottom_2">
+                    <input type="submit" name="publicar" value="Publicar">
+                    <input type="reset" value="Limpiar">
                 </div>
             </form>
         </div>
@@ -444,71 +492,89 @@
     
     #AlertaOk2,
     #AlertaOk {
-        width: 25%;
-        height: 50px;
+        width: 300px;
+        height: 200px;
         background-color: white;
         position: absolute;
-        bottom: 50%;
-        left: 38%;
+        bottom: 0;
+        right: -3%;
         display: none;
         z-index: 1;
         border-radius: 5px;
         border: 1px solid #86C332;
+        padding: 10px;
     }
     
-    .btnHeader,
-    .btnPfp {
-        background-color: #86C332;
-        color: #fff;
-        border-radius: 20px;
-        border: none;
-        padding: 5px 10px 10px 10px;
-        margin-top: 5px;
+    .AlertaOk2 h1 {
+        text-align: center;
+        font-size: 1rem;
+        padding: 10px 0;
+        width: 100%;
     }
     
-    #Configuracion {
+    .btnHeader {
+        padding: 5px 15px;
+        border: #bfc0c2 solid 2px;
+        color: #1a1919;
+        background: none;
+        margin: 0 10px;
+        cursor: pointer;
+        border-radius: 5px;
+        font-size: 1rem;
+        transition: 0.5s;
         position: absolute;
-        width: 210px;
-        height: 216px;
-        background-color: #fff;
-        z-index: 40;
-        display: none;
-        border-radius: 20px;
-        margin: 5px 20px;
-        float: right;
-        right: 0;
-        box-shadow: 2px solid #000;
+        top: 70%;
+    }
+    
+    .btnHeader:hover {
+        background: #86C332;
+        color: #fff;
+    }
+    
+    .btnPfp {
+        padding: 5px 15px;
+        border: #bfc0c2 solid 2px;
+        color: #1a1919;
+        background: none;
+        margin: 0 10px;
+        cursor: pointer;
+        border-radius: 5px;
+        font-size: 1rem;
+        transition: 0.5s;
+    }
+    
+    .btnPfp:hover {
+        background: #86C332;
+        color: #fff;
     }
     
     .publicacion-top {
-        padding-top: 0;
         margin-top: -1px;
         border-radius: 14px 14px 0 0;
     }
     
     #emoji-post {
         position: absolute;
-        margin-left: 12%;
-        top: 100px;
+        margin-left: 13%;
+        top: 180px;
     }
     
     #titulo-post {
         position: flex;
         top: 40px;
         left: 25%;
+        text-align: center;
     }
     
     #descripcion-post {
         position: flex;
         resize: none;
         height: 6em;
-        top: 60px;
+        top: 100px;
         left: 20%;
     }
     
     #imagen-post {
-        margin-left: 20%;
-        margin-top: 0;
         margin-bottom: 0;
     }
     
@@ -516,6 +582,15 @@
         position: inherit;
         margin-top: 60px;
         margin-left: 20%;
+    }
+    /* ------ */
+    
+    .publicacion-bottom {
+        position: relative;
+    }
+    
+    .boton-avatar img {
+        position: absolute;
     }
 </style>
 <script>
@@ -574,29 +649,3 @@
 
     }
 </script>
-<!-- <script type="text/javascript">
-    $("#post-form").submit(function(e) {
-        e.preventDefault();
-        var serializedData = $(this).serialize();
-        $.ajax({
-            type: 'POST',
-            url: '',
-            data: serializedData,
-            success: function(response) {
-                $("#post-form").trigger('reset');
-
-
-
-            },
-            error: function(response) {
-                alert(response["responseJSON"]["error"]);
-            }
-        })
-    });
-</script> -->
-
-<!-- <script>
-    $('#browse').click(function() {
-        $(this).parent().find('#id_imagen').click();
-    });
-</script> -->
