--- a/EscalArt/templates/escalArt/includes/footer.html
+++ b/EscalArt/templates/escalArt/includes/footer.html
@@ -6,7 +6,7 @@
         <div class="box">
             <figure>
                 <a href="#">
-                    <img src="{% static 'EscalArt/img/logo.jpg' %}" alt="Logo EscalArt">
+                    <img src="{% static 'EscalArt/img/EscalArt.png' %}" alt="Logo EscalArt">
                 </a>
             </figure>
         </div>
