--- a/EscalArt/templates/escalArt/Chats.html
+++ b/EscalArt/templates/escalArt/Chats.html
@@ -9,8 +9,11 @@
     <title>Chat</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
+    <link rel="shortcut icon" type="image/png" href="{% static 'EscalArt/img/favicon.ico' %}" />
+
     <link type="text/css" rel="stylesheet" href="{% static 'EscalArt/css/Menu-Fotter.css' %}">
     <link type="text/css" rel="stylesheet" href="{% static 'EscalArt/css/chats.css' %}">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -62,7 +65,11 @@
                     <input id="{{s.idSolicitud}}-input" type="text" size="100" value="{{s.idSolicitud}}" hidden><br>
 
                     <div class="avatar">
-                        <img src="{% static 'EscalArt/img/perfil.jpg' %}" alt="img">
+
+                        {% if c.imagen %}
+                        <img src="/{{c.imagen}}" alt="img"> {% else %}
+                        <img src="{% static 'EscalArt/img/perfil.jpg' %}" alt="img"> {% endif %}
+
                         <span class="estado-usuario enlinea"></span>
                     </div>
                     <div class="cuerpo">
@@ -74,7 +81,6 @@
 
 
 
-                        <span>detalles de mensaje</span>
                     </div>
                     <span class="notificacion">
                         3
@@ -85,6 +91,7 @@
 
 
                 </div>
+
                 {%endif%}
                 <!--  -->
                 {% endfor %}
@@ -101,7 +108,13 @@
                     <input id="{{s.idSolicitud}}-input" type="text" size="100" value="{{s.idSolicitud}}" hidden><br>
 
                     <div class="avatar">
-                        <img src="{% static 'EscalArt/img/perfil.jpg' %}" alt="img">
+
+                        {% for a in cli %} {% if s.usernameArtista == a.username %} {% if a.imagen %}
+
+                        <img src="/{{a.imagen}}" alt="img"> {% else %}
+                        <img src="{% static 'EscalArt/img/perfil.jpg' %}" alt="img"> {% endif %} {% endif %} {% endfor %}
+
+
                         <span class="estado-usuario enlinea"></span>
                     </div>
                     <div class="cuerpo">
@@ -123,7 +136,6 @@
 
 
 
-                        <span>detalles de mensaje</span>
                     </div>
                     <span class="notificacion">
                         3
@@ -134,6 +146,7 @@
 
 
                 </div>
+
                 <!--  -->
                 {%endif%}
                 <!--  -->
@@ -141,7 +154,6 @@
 
                 <!--  -->
                 {%endif%}
-
                 <!--  -->
                 {% endfor %}
             </div>
@@ -149,98 +161,25 @@
         {%block content%}
         <div class="seccion-chat">
             <div class="usuario-seleccionado">
-                <div class="avatar">
-                    <img src="{% static 'EscalArt/img/perfil.jpg' %}" alt="img">
-                </div>
+
                 <div class="cuerpo">
-                    <span>Nombre de usuario</span>
-                    <span>Activo - Escribiendo...</span>
+                    <span></span>
+                    <span></span>
                 </div>
                 <div class="opciones">
-                    <ul>
-                        <li>
-                            <button type="button"><i class="fas fa-video"></i></button>
-                        </li>
-                        <li>
-                            <button type="button"><i class="fas fa-phone-alt"></i></button>
-                        </li>
-                    </ul>
+
                 </div>
             </div>
-            <div class="panel-chat">
-                <div class="mensaje">
-                    <div class="avatar">
-                        <img src="{% static 'EscalArt/img/perfil.jpg' %}" alt="img">
-                    </div>
-                    <div class="cuerpo">
-                        <div class="texto">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Dolor eligendi voluptatum dolore voluptas iure.
-                            <span class="tiempo">
-                                <i class="far fa-clock"></i>
-                                Hace 5 min
-                            </span>
-                        </div>
-                        <ul class="opciones-msj">
-                            <li>
-                                <button type="button">
-                                    <i class="fas fa-times"></i>
-                                </button>
-                            </li>
-                            <li>
-                                <button type="button">
-                                    <i class="fas fa-share-square"></i>
-                                </button>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- derecha -->
-                <div class="mensaje left">
-                    <div class="cuerpo">
-                        <div class="texto">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Dolor eligendi voluptatum dolore voluptas iure.
-                            <span class="tiempo">
-                                <i class="far fa-clock"></i>
-                                Hace 6 min
-                            </span>
-                        </div>
-                        <ul class="opciones-msj">
-                            <li>
-                                <button type="button">
-                                    <i class="fas fa-times"></i>
-                                </button>
-                            </li>
-                            <li>
-                                <button type="button">
-                                    <i class="fas fa-share-square"></i>
-                                </button>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="avatar">
-                        <img src="{% static 'EscalArt/img/perfil.jpg' %}" alt="img">
-                    </div>
-                </div>
+            <div class="panel-chat" id="panel-chat">
+                <br><br><br><br>
+                <br><br>
+                <h1 style="text-align: center;">Selecciona un chat</h1>
+                <br><br>
+                <br><br><br><br>
+
             </div>
             <div class="panel-escritura">
-                <form class="textarea">
-                    <div class="opcines">
-                        <button type="button">
-                            <i class="fas fa-file"></i>
-                            <label for="file"></label>
-                            <input type="file" id="file">
-                        </button>
-                        <button type="button">
-                            <i class="far fa-image"></i>
-                            <label for="img"></label>
-                            <input type="file" id="img">
-                        </button>
-                    </div>
-                    <textarea placeholder="Escribir mensaje"></textarea>
-                    <button type="button" class="enviar">
-                        <i class="fas fa-paper-plane"></i>
-                    </button>
-                </form>
+
             </div>
         </div>
         {% endblock %}
