--- a/EscalArt/templates/registration/login.html
+++ b/EscalArt/templates/registration/login.html
@@ -8,6 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'EscalArt/img/favicon.ico' %}" />
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link type="text/css" rel="stylesheet" href="{% static 'EscalArt/css/login.css' %}">
@@ -19,22 +21,7 @@
 
 <body>
     <!--Menu/Header de la pagina-->
-    <header>
-        <nav class="nav">
-            <div class="logo">EscalArt</div>
-            <div class="search-box">
-                <input type="text" placeholder="Buscando...">
-                <a href="##" class="icon">
-                    <i class="fas fa-search"></i>
-                </a>
-            </div>
-            <ul class="menu">
-                <li><a href="{% url 'home' %}"><i class="fa-solid fa-house-chimney"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-comment-dots"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-question"></i></a></li>
-            </ul>
-        </nav>
-    </header>
+    {% include 'escalArt/includes/menu.html' %}
     <!--Inicio de sesion-->
     {% load crispy_forms_tags %}
     <div class="container-login">
@@ -47,8 +34,10 @@
                 <label for="checkid">Recuerdame</label>
                 <a href="{% url 'reset_password' %}">¿Olvidaste tu contraseña?</a>
 
+                <div class="btn-inicio-sesion">
+                    <input class="boton-form" type="submit" value="Iniciar Sesion">
+                </div>
 
-                <input class="boton-form" type="submit" value="Iniciar Sesion">
 
             </form>
         </div>
