--- a/EscalArt/templates/registration/registro.html
+++ b/EscalArt/templates/registration/registro.html
@@ -8,6 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'EscalArt/img/favicon.ico' %}" />
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="{% static 'escalArt/css/registro.css' %}">
     <link type="text/css" rel="stylesheet" href="{% static 'escalArt/css/Menu-Fotter.css' %}">
@@ -31,22 +33,8 @@
 
 <body>
     <!--Menu/Header de la pagina-->
-    <header>
-        <nav class="nav">
-            <div class="logo">EscalArt</div>
-            <div class="search-box">
-                <input type="text" placeholder="Buscando...">
-                <a href="##" class="icon">
-                    <i class="fas fa-search"></i>
-                </a>
-            </div>
-            <ul class="menu">
-                <li><a href="{% url 'home' %}"><i class="fa-solid fa-house-chimney"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-comment-dots"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-question"></i></a></li>
-            </ul>
-        </nav>
-    </header>
+    {% include 'escalArt/includes/menu.html' %}
+
     <!--Registro Usuario-->
     {% load crispy_forms_tags %}
     <div class="content_registro">
@@ -77,6 +65,7 @@
                         <button type="submit">Registrar</button>
                     </p>
                 </form>
+                {{error}}
             </div>
         </div>
     </div>
